--- a/src/app.html
+++ b/src/app.html
@@ -10,7 +10,7 @@
 		<title>Arycute Counter</title>
 		<meta property="og:title" content="Arycute Counter" />
 		<meta property="og:type" content="website" />
-		<meta property="og:image" content="https://github.com/Skk-tj/arya-counter/blob/42ef4cdf7ad533a5f2d2985a7f5f2f9c800818fe/static/bg.png" />
+		<meta property="og:image" content="https://raw.githubusercontent.com/Skk-tj/arya-counter/42ef4cdf7ad533a5f2d2985a7f5f2f9c800818fe/static/bg.png" />
 		<meta name="googlebot" content="notranslate">
 		%sveltekit.head%
 	</head>
