--- a/src/app.html
+++ b/src/app.html
@@ -12,6 +12,7 @@
 		<meta property="og:type" content="website" />
 		<meta property="og:image" content="https://raw.githubusercontent.com/Skk-tj/arya-counter/42ef4cdf7ad533a5f2d2985a7f5f2f9c800818fe/static/bg.png" />
 		<meta name="googlebot" content="notranslate">
+		<meta name="twitter:card" content="summary_large_image">
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" class="h-screen overscroll-none">
