--- a/src/app.html
+++ b/src/app.html
@@ -1,23 +1,28 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-		<title>Arycute Counter</title>
-		<meta property="og:title" content="Arycute Counter" />
-		<meta property="og:type" content="website" />
-		<meta property="og:image" content="https://raw.githubusercontent.com/Skk-tj/arya-counter/42ef4cdf7ad533a5f2d2985a7f5f2f9c800818fe/static/bg.png" />
-		<meta name="googlebot" content="notranslate">
-		<meta name="twitter:card" content="summary_large_image">
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover" class="h-screen overscroll-none">
-		<div style="display: contents">
-			%sveltekit.body%
-		</div>
-	</body>
+
+<head>
+	<meta charset="utf-8" />
+	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap"
+		rel="stylesheet">
+	<title>Arycute Counter</title>
+	<meta property="og:title" content="Arycute Counter" />
+	<meta property="og:type" content="website" />
+	<meta property="og:image"
+		content="https://raw.githubusercontent.com/Skk-tj/arya-counter/42ef4cdf7ad533a5f2d2985a7f5f2f9c800818fe/static/bg.png" />
+	<meta name="googlebot" content="notranslate">
+	<meta name="twitter:card" content="summary_large_image">
+	%sveltekit.head%
+</head>
+
+<body data-sveltekit-preload-data="hover" class="h-screen overscroll-none">
+	<div style="display: contents">
+		%sveltekit.body%
+	</div>
+</body>
+
 </html>
